--- a/download2/images.html
+++ b/download2/images.html
@@ -1,15 +1,15 @@
 <?php declare(strict_types=1); ?>
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>ファイルデータの出力 - honkaku</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>ファイルデータの出力</title>
+  </head>
+  <body>
     <p>丸マークの画像</p>
-    <img src="show-image.php?type=circle">
+    <img src="show-image.php?type=circle" />
 
     <p>三角マークの画像</p>
-    <img src="show-image.php?type=triangle">
-</body>
+    <img src="show-image.php?type=triangle" />
+  </body>
 </html>
